[package]
name = "thn"
version = "0.1.0"
edition = "2021"
description = "CLI tool for appending memos to Obsidian daily notes (Thino compatible)"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = "0.4"
dirs = "5"
